--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "node models/seeds/todoSeeder.js"
+    "seed": "node models/seeds/categorySeeder.js && node models/seeds/recordSeeder.js"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +18,11 @@
     "express-handlebars": "^4.0.4",
     "express-session": "^1.17.1",
     "method-override": "^3.0.0",
+    "mongoose": "^5.13.17",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.3.1"
   }
 }
