--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "express-session": "^1.17.1",
+    "express-validator": "^7.0.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.13.17",
     "passport": "^0.4.1",
